# thesis

./: README.md  appendbinaryfiles.py  benchmark_class.py  cifar_class.py  cifar_cnn_class.py  cifar_mlp_class.py  cifar_rf_class.py  emg_class.py  emg_knn_class.py  emg_nn_class.py  emg_rf_class.py  emg_svm_class.py  emg_train_labels.csv  har_class.py  luigi_tasks.py  main.py  mnist_class.py  mnist_knn_class.py  mnist_nn_class.py  mnist_rf_class.py  mnist_svm_class.py
bsim/components/ext_2G4_phy_v1/src/: p2G4_main.c
central device/src/: main.c
cifar/: cifar_class.py  cifar_cnn_class.py  cifar_mlp_class.py  cifar_rf_class.py
emg/: emg_class.py  emg_knn_class.py  emg_nn_class.py  emg_rf_class.py  emg_svm_class.py  emg_test_labels.csv
ext_2G4_phy_v1/src/: CMakeLists.txt  p2G4_dump.c
mnist/: mnist_class.py  mnist_knn_class.py  mnist_nn_class.py  mnist_rf_class.py  mnist_svm_class.py
peripheral device/: hts.c  main.c
peripheral device/src/: hts.h
